--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/jquery-ui.min.css">
   <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/main.css">
+  <link rel="icon" href="favicon.ico" type="image/x-icon"/>
 </head>
 
 <body>
@@ -82,8 +83,8 @@
     <div id="pen-red" class="pen"></div>
   </div>
   
-  <script src="javascripts/jquery.js"></script>
-  <script src="javascripts/jquery-ui.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
   <script src="javascripts/checker.js"></script>
   <script src="javascripts/main.js"></script>
 </body>
