Changed initial instruction title

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <h2>Black's Turn</h2>
+  <h2>Black's Turn...</h2>
   <div id="table">
     <div id="pen-black" class="pen"></div>
     <div id="board">
